[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene.gd" type="Script" id=1]

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UI" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Left" type="VBoxContainer" parent="UI"]
margin_right = 248.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="CenterContainer" parent="UI/Left"]
margin_right = 248.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Guess" type="ColorRect" parent="UI/Left/Top"]
margin_left = 99.0
margin_right = 149.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Bottom" type="CenterContainer" parent="UI/Left"]
margin_top = 54.0
margin_right = 248.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="LeftButton" type="TextureButton" parent="UI/Left/Bottom"]
margin_left = 74.0
margin_top = 73.0
margin_right = 174.0
margin_bottom = 173.0
rect_min_size = Vector2( 100, 100 )

[node name="ColorRect" type="ColorRect" parent="UI/Left/Bottom/LeftButton"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="UI/Left/Bottom/LeftButton/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -7.0
margin_right = 28.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "White"
align = 1

[node name="Right" type="VBoxContainer" parent="UI"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="CenterContainer" parent="UI/Right"]
margin_right = 248.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Guess" type="ColorRect" parent="UI/Right/Top"]
margin_left = 99.0
margin_right = 149.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Bottom" type="CenterContainer" parent="UI/Right"]
margin_top = 54.0
margin_right = 248.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="RightButton" type="TextureButton" parent="UI/Right/Bottom"]
margin_left = 74.0
margin_top = 73.0
margin_right = 174.0
margin_bottom = 173.0
rect_min_size = Vector2( 100, 100 )

[node name="ColorRect" type="ColorRect" parent="UI/Right/Bottom/RightButton"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Right/Bottom/RightButton/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -7.0
margin_right = 28.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Black"
align = 1

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 250, 0, 250, 300 )
default_color = Color( 0, 0, 0, 1 )
texture_mode = 80
[connection signal="pressed" from="UI/Left/Bottom/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="UI/Right/Bottom/RightButton" to="." method="_on_RightButton_pressed"]
